 * ANY SPECIAL, DIRECT, INDIRECT, OR CONSEQUENTIAL DAMAGES OR ANY DAMAGES
 * WHATSOEVER RESULTING FROM LOSS OF USE, DATA OR PROFITS, WHETHER IN AN
 * ACTION OF CONTRACT, NEGLIGENCE OR OTHER TORTIOUS ACTION, ARISING OUT OF
 * OR IN CONNECTION WITH THE USE OR PERFORMANCE OF THIS SOFTWARE.
 * 
 * $Id$
 */
 
TreeTank 4.20
-------------
3  Removed bean layer as web service is main target.
2  Names, types, and values are unified accessible by key, string, ar raw.
1  Removed type-specific encodings. Use external classes to encode types within
   byte arrays.
0  No longer binary compatible.
 
TreeTank 4.19
-------------
12 Fixed memory leak because the write transaction state is not properly closed
   during an intermediate auto commit.
11 Value types now int to fully support XMLSchema.
10 byte[] storing UTF-8 encoded String now also encodes internal predefined
   entities '&' and '<' to allow for XML-compliant byte-streaming.
 9 Added raw name methods to access the UTF-8-encoded byte[] underlying a name.
 8 Added XMLSerializer which is the most efficient way to serialize a subtree
   into an OutputStream. Required for web applications.
 7 Added ant task to generate JavaDoc.
 6 Added skeleton for TreeTankStream[Reader|Writer] implementing the
   XMLStream[Reader|Writer] interfaces of StAX.
 5 Fixed critical bug in TypedValue.atomize().
 4 Fixed critical bug in SAXGenerator emitting end elements too early.
 3 Renamed getRevisionSize() to getNodeCount() which is more expressive.
 2 Introduced transaction ID. This allows to close all open transactions during
   ISession.close().
 1 Fixed bug with NestedAxis.
 0 Local part and prefix are no longer stored separately but as qualified name.
   Binary incompatibility with 4.18.
 
TreeTank 4.18
-------------
11 Added var arg to FilterAxis to allow for multiple filters.
10 Fixed bug with cursor moving to attributes.
 9 SAXHandler now able to insert subtrees into an existing treetank.